syntax = "proto3";

package ollama;

// Empty message for requests with no parameters
message Empty {}

// Generate Completion Service
service OllamaService {
  rpc GenerateCompletion(GenerateRequest) returns (stream GenerateResponse);
  rpc ChatCompletion(ChatRequest) returns (stream ChatResponse);
  rpc PullModel(PullRequest) returns (stream PullResponse);
  rpc ListModels(Empty) returns (ModelList);
  rpc DeleteModel(DeleteModelRequest) returns (DeleteModelResponse);
  rpc ShowModelInfo(ShowModelRequest) returns (ShowModelResponse);
}

// Generate Completion Request
message GenerateRequest {
  string model = 1;
  string prompt = 2;
  string system = 3;
  repeated string images = 4;
  GenerateOptions options = 5;
  string format = 6;
  bool stream = 7;
  string agent_id = 8;
  string task_id = 9;
}

message GenerateOptions {
  int32 num_ctx = 1;
  double temperature = 2;
  int32 top_k = 3;
  double top_p = 4;
  double repeat_penalty = 5;
  int32 seed = 6;
  int32 num_predict = 7;
  repeated string stop = 8;
}

message GenerateResponse {
  string model = 1;
  string response = 2;
  bool done = 3;
  int64 total_duration = 4;
  int64 load_duration = 5;
  int64 prompt_eval_count = 6;
  int64 prompt_eval_duration = 7;
  int64 eval_count = 8;
  int64 eval_duration = 9;
}

// Chat Completion Request
message ChatRequest {
  string model = 1;
  repeated ChatMessage messages = 2;
  GenerateOptions options = 3;
  bool stream = 4;
  string format = 5;
  string agent_id = 6;
  string task_id = 7;
}

message ChatMessage {
  string role = 1;
  string content = 2;
  repeated string images = 3;
}

message ChatResponse {
  string model = 1;
  ChatMessage message = 2;
  bool done = 3;
  int64 total_duration = 4;
  int64 load_duration = 5;
  int64 prompt_eval_count = 6;
  int64 prompt_eval_duration = 7;
  int64 eval_count = 8;
  int64 eval_duration = 9;
}

// Pull Model Request/Response
message PullRequest {
  string name = 1;
  bool insecure = 2;
  bool stream = 3;
}

message PullResponse {
  string status = 1;
  string digest = 2;
  int64 total = 3;
  int64 completed = 4;
}

// List Models Response
message ModelList {
  repeated ModelInfo models = 1;
}

message ModelInfo {
  string name = 1;
  int64 size = 2;
  string digest = 3;
  string modified_at = 4;
  ModelDetails details = 5;
}

message ModelDetails {
  string format = 1;
  string family = 2;
  repeated string families = 3;
  string parameter_size = 4;
  string quantization_level = 5;
}

// Delete Model Request/Response
message DeleteModelRequest {
  string name = 1;
}

message DeleteModelResponse {
  bool success = 1;
  string message = 2;
}

// Show Model Info Request/Response
message ShowModelRequest {
  string name = 1;
}

message ShowModelResponse {
  string modelfile = 1;
  string parameters = 2;
  string template = 3;
  ModelDetails details = 4;
}

